@@ -1,13 +1,12 @@
 package com.example.proyecto.service;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.example.proyecto.dto.RoleRequest;
 import com.example.proyecto.dto.RoleResponse;
+import com.example.proyecto.mapper.RoleMapper;
 import com.example.proyecto.model.Role;
 import com.example.proyecto.repository.RoleRepository;
 
@@ -18,70 +17,53 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 @Transactional
 public class RoleServiceImpl implements RoleService{
-    private final RoleRepository roleRepository;
+    private final RoleRepository repository;
 
     @Override
     public List<RoleResponse> findAll() {
-        return roleRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(RoleMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public Optional<RoleResponse> findById(Integer id) {
-        return roleRepository.findById(id)
-                .map(this::mapToResponse);
+    public RoleResponse findById(Integer id) {
+        Role role = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Rol no encontrado con ID: " + id));
+        return RoleMapper.toResponse(role);
     }
 
     @Override
-    public List<RoleResponse> findByStatus(Integer status) {
-        return roleRepository.findAll().stream()
-                .filter(role -> role.getStatus().equals(status))
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    public RoleResponse save(RoleRequest req) {
+        Role role = RoleMapper.toEntity(req);
+        Role savedRole = repository.save(role);
+        return RoleMapper.toResponse(savedRole);
     }
 
     @Override
-    public RoleResponse create(RoleRequest request) {
-        Role role = Role.builder()
-                .role(request.getRole())
-                .status(request.getStatus())
-                .build();
-
-        Role saved = roleRepository.save(role);
-        return mapToResponse(saved);
-    }
-
-    @Override
-    public RoleResponse update(Integer id, RoleRequest request) {
-        Role existing = roleRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
-
-        existing.setRole(request.getRole());
-        existing.setStatus(request.getStatus());
-
-        Role updated = roleRepository.save(existing);
-        return mapToResponse(updated);
+    public RoleResponse update(Integer id, RoleRequest req) {
+        Role existingRole = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Rol no encontrado con ID: " + id));
+        
+        RoleMapper.copyToEntity(req, existingRole);
+        Role updatedRole = repository.save(existingRole);
+        return RoleMapper.toResponse(updatedRole);
     }
 
     @Override
     public void delete(Integer id) {
-        if (!roleRepository.existsById(id)) {
-            throw new RuntimeException("Rol no encontrado");
+        if (!repository.existsById(id)) {
+            throw new RuntimeException("Rol no encontrado con ID: " + id);
         }
-        roleRepository.deleteById(id);
+        repository.deleteById(id);
     }
 
     @Override
-    public boolean existsById(Integer id) {
-        return roleRepository.existsById(id);
-    }
-
-    private RoleResponse mapToResponse(Role role) {
-        return RoleResponse.builder()
-                .idRole(role.getIdRole())
-                .role(role.getRole())
-                .status(role.getStatus())
-                .build();
+    public List<RoleResponse> findByStatus(Integer status) {
+        // Implementar cuando agregues el método al repository
+        return repository.findAll().stream()
+                .filter(r -> r.getStatus().equals(status))
+                .map(RoleMapper::toResponse)
+                .toList();
     }
 }
