@@ -1,16 +1,12 @@
 package com.example.proyecto.service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
-import com.example.proyecto.dto.CustomerResponse;
-import com.example.proyecto.dto.GymResponse;
 import com.example.proyecto.dto.VisitRequest;
 import com.example.proyecto.dto.VisitResponse;
+import com.example.proyecto.mapper.VisitMapper;
 import com.example.proyecto.model.Customer;
 import com.example.proyecto.model.Gym;
 import com.example.proyecto.model.Visit;
@@ -25,145 +21,89 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 @Transactional
 public class VisitServiceImpl implements VisitService{
-    private final VisitRepository visitRepository;
-    private final GymRepository gymRepository;
+    private final VisitRepository repository;
     private final CustomerRepository customerRepository;
+    private final GymRepository gymRepository;
 
     @Override
     public List<VisitResponse> findAll() {
-        return visitRepository.findAll().stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+        return repository.findAll().stream()
+                .map(VisitMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public Optional<VisitResponse> findById(Integer id) {
-        return visitRepository.findById(id)
-                .map(this::mapToResponse);
+    public VisitResponse findById(Integer id) {
+        Visit visit = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Visita no encontrada con ID: " + id));
+        return VisitMapper.toResponse(visit);
     }
 
     @Override
-    public List<VisitResponse> findByCustomerId(Integer customerId) {
-        return visitRepository.findByCustomerIdCustomer(customerId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<VisitResponse> findByGymId(Integer gymId) {
-        return visitRepository.findByGymIdGym(gymId).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<VisitResponse> findByPendingStatus(Integer pending) {
-        return visitRepository.findByPending(pending).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<VisitResponse> findByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
-        return visitRepository.findByDateBetween(startDate, endDate).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<VisitResponse> findPendingVisitsByGym(Integer gymId) {
-        return visitRepository.findByGymIdGymAndPending(gymId, 1).stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public VisitResponse create(VisitRequest request) {
-        Customer customer = customerRepository.findById(request.getIdCustomer())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+    public VisitResponse save(VisitRequest req) {
+        Customer customer = customerRepository.findById(req.getIdCustomer())
+                .orElseThrow(() -> new RuntimeException("Cliente no encontrado con ID: " + req.getIdCustomer()));
+        Gym gym = gymRepository.findById(req.getIdGym())
+                .orElseThrow(() -> new RuntimeException("Gimnasio no encontrado con ID: " + req.getIdGym()));
         
-        Gym gym = gymRepository.findById(request.getIdGym())
-                .orElseThrow(() -> new RuntimeException("Gimnasio no encontrado"));
-
-        Visit visit = Visit.builder()
-                .customer(customer)
-                .date(request.getDate() != null ? request.getDate() : LocalDateTime.now())
-                .pending(request.getPending() != null ? request.getPending() : 0)
-                .gym(gym)
-                .build();
-
-        Visit saved = visitRepository.save(visit);
-        return mapToResponse(saved);
+        Visit visit = VisitMapper.toEntity(req);
+        visit.setCustomer(customer);
+        visit.setGym(gym);
+        
+        Visit savedVisit = repository.save(visit);
+        return VisitMapper.toResponse(savedVisit);
     }
 
     @Override
-    public VisitResponse update(Integer id, VisitRequest request) {
-        Visit existing = visitRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Visita no encontrada"));
-
-        Customer customer = customerRepository.findById(request.getIdCustomer())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+    public VisitResponse update(Integer id, VisitRequest req) {
+        Visit existingVisit = repository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Visita no encontrada con ID: " + id));
         
-        Gym gym = gymRepository.findById(request.getIdGym())
-                .orElseThrow(() -> new RuntimeException("Gimnasio no encontrado"));
-
-        existing.setCustomer(customer);
-        existing.setDate(request.getDate());
-        existing.setPending(request.getPending());
-        existing.setGym(gym);
-
-        Visit updated = visitRepository.save(existing);
-        return mapToResponse(updated);
+        if (!existingVisit.getCustomer().getIdCustomer().equals(req.getIdCustomer())) {
+            Customer customer = customerRepository.findById(req.getIdCustomer())
+                    .orElseThrow(() -> new RuntimeException("Cliente no encontrado con ID: " + req.getIdCustomer()));
+            existingVisit.setCustomer(customer);
+        }
+        
+        if (!existingVisit.getGym().getIdGym().equals(req.getIdGym())) {
+            Gym gym = gymRepository.findById(req.getIdGym())
+                    .orElseThrow(() -> new RuntimeException("Gimnasio no encontrado con ID: " + req.getIdGym()));
+            existingVisit.setGym(gym);
+        }
+        
+        VisitMapper.copyToEntity(req, existingVisit);
+        Visit updatedVisit = repository.save(existingVisit);
+        return VisitMapper.toResponse(updatedVisit);
     }
 
     @Override
     public void delete(Integer id) {
-        if (!visitRepository.existsById(id)) {
-            throw new RuntimeException("Visita no encontrada");
+        if (!repository.existsById(id)) {
+            throw new RuntimeException("Visita no encontrada con ID: " + id);
         }
-        visitRepository.deleteById(id);
+        repository.deleteById(id);
     }
 
     @Override
-    public boolean existsById(Integer id) {
-        return visitRepository.existsById(id);
+    public List<VisitResponse> findByCustomerId(Integer idCustomer) {
+        return repository.findByCustomerIdCustomer(idCustomer).stream()
+                .map(VisitMapper::toResponse)
+                .toList();
     }
 
     @Override
-    public Long countVisitsByCustomerAndDateRange(Integer customerId, LocalDateTime startDate, LocalDateTime endDate) {
-        return visitRepository.countVisitsByCustomerAndDateRange(customerId, startDate, endDate);
+    public List<VisitResponse> findByGymId(Integer idGym) {
+        return repository.findByGymIdGym(idGym).stream()
+                .map(VisitMapper::toResponse)
+                .toList();
     }
 
-    private VisitResponse mapToResponse(Visit visit) {
-        CustomerResponse customerResponse = CustomerResponse.builder()
-                .idCustomer(visit.getCustomer().getIdCustomer())
-                .name(visit.getCustomer().getName())
-                .cologne(visit.getCustomer().getCologne())
-                .phone(visit.getCustomer().getPhone())
-                .birthDate(visit.getCustomer().getBirthDate())
-                .medicalCondition(visit.getCustomer().getMedicalCondition())
-                .registrationDate(visit.getCustomer().getRegistrationDate())
-                .photo(visit.getCustomer().getPhoto())
-                .photoCredential(visit.getCustomer().getPhotoCredential())
-                .verifiedNumber(visit.getCustomer().getVerifiedNumber())
-                .gym(GymResponse.builder()
-                        .idGym(visit.getCustomer().getGym().getIdGym())
-                        .gym(visit.getCustomer().getGym().getGym())
-                        .build())
-                .build();
-
-        GymResponse gymResponse = GymResponse.builder()
-                .idGym(visit.getGym().getIdGym())
-                .gym(visit.getGym().getGym())
-                .build();
-
-        return VisitResponse.builder()
-                .idVisit(visit.getIdVisit())
-                .idCustomer(visit.getCustomer().getIdCustomer())
-                .date(visit.getDate())
-                .pending(visit.getPending())
-                .gym(gymResponse)
-                .customer(customerResponse)
-                .build();
+    @Override
+    public List<VisitResponse> findByPending(Integer pending) {
+        // Implementar cuando agregues el método al repository
+        return repository.findAll().stream()
+                .filter(v -> v.getPending().equals(pending))
+                .map(VisitMapper::toResponse)
+                .toList();
     }
 }
